libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/SUBLDA.NSN
DEFINE DATA
PARAMETER USING MYLDA
END-DEFINE

END
